# stealth-controller

./: README.md
Firmware/: README.md  platformio.ini
Firmware/lib/StealthController/: StealthController.cpp  StealthController.h
Firmware/src/: can.cpp  can.h  canstream.cpp  canstream.h  main.cpp
Firmware/src/can/: CANCommander.cpp  CANCommander.h  CANDriver.cpp  CANDriver.h  CANStream.cpp  CommanderCAN.cpp  CommanderCAN.h  can.cpp  can.h  can_api.h  can_esp32.cpp  canstream.cpp  canstream.h
PCB/: .gitignore  Driver-cache.lib  Driver.kicad_pcb  Driver.pro  Driver.sch  fp-lib-table  sym-lib-table
PCB/DriverParts/DriverParts.pretty/: CommsLabel.kicad_mod  DRV8316.kicad_mod  ESP32PICOV3.kicad_mod  KiCad.kicad_mod  LMR36506.kicad_mod  Logo.kicad_mod  MA702.kicad_mod  Motor_Wire_Solder_Pad.kicad_mod  SHDR3W50P0X150.kicad_mod  SN65HVD230QDR.kicad_mod  SimpleFOC.kicad_mod  TPS7A0312PDBVR.kicad_mod  XKB_Connectivity_TS-1177-B-B-B.kicad_mod  XT30PB.kicad_mod
PCB/DriverParts/DriverParts.symbols/: DriverParts.dcm  DriverParts.lib
ros2/: .gitignore  linux_env.sh  windows_env.bat
ros2/simplefoc_can_pubsub/: .gitignore  package.xml  setup.cfg  setup.py
ros2/simplefoc_can_pubsub/simplefoc_can_pubsub/: can_handler.py  client_member_function.py  publisher_member_function.py  server_member_function.py
ros2/simplefoc_interfaces/: CMakeLists.txt  package.xml
simplefoc_can_pubsub/: setup.py
simplefoc_can_pubsub/log/: latest_list
simplefoc_can_pubsub/simplefoc_can_pubsub/: publisher_member_function.py  subscriber_member_function.py
(+5 files in other folders)
